station_dialog: Ensure the scrollbar is not under header bar

--- a/data/gtk/style.css
+++ b/data/gtk/style.css
@@ -6,6 +6,14 @@
   background-color: transparent;
 }
 
+scrolledwindow.flat-headerbar scrollbar.vertical {
+  margin-top: 47px;
+}
+
+scrolledwindow.flat-headerbar scrollbar.vertical:not(.overlay-indicator) {
+  border-top: 1px solid @borders;
+}
+
 .tile {
   padding: 0px;
   border-radius: 12px;
